--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <body>
     <h1>Hola</h1>
+    <section>
+        <div class="verde"></div>
+        <div class="amarillo"></div>
+        <div class="azul"></div>
+        <div class="rojo"></div>
+
+    </section>
 </body>
 
 </html>
