--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-    <section>
-        <div class="verde "></div>
-        <div class="amarillo"></div>
-        <div class="azul"></div>
-        <div class="rojo"></div>
+    <header class="verde"></header>
 
+    <section class="sct-contenedor">
+        <div class="azul"></div>
+        <div class="amarillo"></div>
     </section>
+
+    <footer class="rojo"></footer>
 </body>
 
 </html>
