--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+
 </head>
 
 <body>
-    <header class="verde"></header>
-
-    <section class="sct-contenedor">
-        <div class="azul"></div>
-        <div class="amarillo"></div>
-    </section>
-
-    <footer class="rojo"></footer>
+    <div class="wrapper">
+        <section>
+            <div>
+                <h1 class="titulo">Code Review as a Service</h1>
+                <p>Increase velocity and reduce technical debt through quality code review by expert engineers backed by best-in-class automation.</p>
+            </div>
+        </section>
+        <section>
+            <img class="imagen" src="https://www.pullrequest.com/images/figures/home/hero-graphic.webp">
+        </section>
+        <section>
+            <button class="demo">Schedule<br> demo</button>
+            <button class="iniciar">Sing up</button>
+        </section>
+        </nav>
 </body>
-
-</html>
